--- a/configs/main.yaml
+++ b/configs/main.yaml
@@ -73,7 +73,7 @@ trainer:
   max_epochs: 20
   gradient_clip_val: 20
   accelerator: gpu
-  devices: 1
+  devices: [5]
 
 ckpt_path: null
 pretrained: null
