--- a/configs/main.yaml
+++ b/configs/main.yaml
@@ -10,7 +10,7 @@ model:
   max_label_length: 256
   # The ordering in charset_train matters. It determines the token IDs assigned to each character.
   charset_path: ???
-  batch_size: 8
+  batch_size: 128
   weight_decay: 0.0
   warmup_pct: 0.075  # equivalent to 1.5 epochs of warm up
 
@@ -25,7 +25,7 @@ data:
   remove_whitespace: true
   normalize_unicode: true
   augment: true
-  num_workers: 4
+  num_workers: 64
   train_sample_num: 1000000
   eval_sample_num: 200
   pred_sample_num: -1
@@ -73,7 +73,7 @@ trainer:
   max_epochs: 20
   gradient_clip_val: 20
   accelerator: gpu
-  devices: [5]
+  devices: 1
 
 ckpt_path: null
 pretrained: null
