--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "test",
+            "name": "pred",
             "type": "debugpy",
             "request": "launch",
-            "program": "test.py",
+            "program": "pred.py",
             "console": "integratedTerminal",
             "justMyCode": true
         },
