--- a/configs/model/parseq.yaml
+++ b/configs/model/parseq.yaml
@@ -4,11 +4,11 @@ _target_: strhub.models.parseq.system.PARSeq
 # Data
 # patch_size: [ 4, 8 ]  # [ height, width ]
 # patch_size: [ 32, 32 ]  # [ height, width ]
-patch_size: [ 16, 16 ]  # [ height, width ]
+patch_size: [ 8, 16 ]  # [ height, width ]
 
 # Architecture
 # embed_dim: 384
-embed_dim: 576
+embed_dim: 768
 # enc_num_heads: 6
 enc_num_heads: 8
 enc_mlp_ratio: 4
@@ -18,7 +18,8 @@ dec_mlp_ratio: 4
 dec_depth: 1
 
 # Training
-lr: 7e-4
+# lr: 7e-4
+lr: 3e-4  # TODO 下一次训练测试
 perm_num: 6
 perm_forward: true
 perm_mirrored: true
